# mini-keypair-signer

./: Cargo.toml  mini-keypair-cli
keypair-cli/: Cargo.toml  README.md
keypair-cli/src/: main.rs
keypair-signer/: Cargo.toml
keypair-signer/src/: lib.rs  tests.rs
