[workspace]
members = ["keypair-signer", "keypair-cli"]

resolver = "2"

[workspace.package]
authors = ["Francisco Valentim Castilho <franciscoannyon@gmail.com>"]
edition = "2024"
repository = "https://github.com/Anny0nn/mini-keypair-signer"

[workspace.dependencies]
clap = { version = "4.5.51", features = ["cargo", "derive"] }
hex = "0.4.3"
rand = { version = "0.9.2", features = ["thread_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"

mini-keypair-signer = { path = "./keypair-signer" }
